--- a/js if/else Stament/if else.html
+++ b/js if/else Stament/if else.html
@@ -29,11 +29,24 @@
         */
 
         //Exercise 3
-        let score = prompt("Enter a score (0-100)");
+        /*let score = prompt("Enter a score (0-100)");
         let extrAct = prompt("Are you in an extracurricular activity? (Y/N)");
 
         if (score >= 85){
-            
+            console.log("Eligible for scholarship")
+        } else if (score <=85){
+            console.log("Not eligible")
+        }*/
+
+        //Exercise 4
+
+        let random = Math.random();
+        console.log(random);
+        if (random < 0.5){
+            console.log("Heads")
+        } else {
+            console.log("tails")
         }
+
     </script>
 </body>
