TODOU LOS ARCHIVOS AZA GEY

--- a/2homepage.html
+++ b/2homepage.html
@@ -6,6 +6,7 @@
             <h2 style="text-align:center;"> WELCOME TO</h2>
             <h1 style="text-align:center;"> NY LIGHT FILM ACADEMY></h1>
         </div>
+        </div>
 
         <img class="left" src="IMG-20250121-WA0007.jpg">
         <div style =
